--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rwbackend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc"
   },
@@ -13,14 +14,18 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
