--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "@controllers/*": ["controllers/*"],
       "@models/*": ["models/*"],
       "@routes/*": ["routes/*"],
-      "@utils/*": ["utils/*"]
+      "@services/*": ["services/*"]
     },
     "outDir": "./dist",
     "esModuleInterop": true,
