--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@mongodb-js/saslprep": "^1.1.9",
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
