--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rwbackend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -33,8 +33,12 @@
     "express": "^4.21.1",
     "form-data": "^4.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
