--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rwbackend",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/index.ts",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon -exec 'ts-node' src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -36,6 +36,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
     "uuid": "^11.0.3"
   },
   "engines": {
