--- a/package.json
+++ b/package.json
@@ -3,15 +3,29 @@
   "version": "1.0.0",
   "main": "dist/index.ts",
   "scripts": {
-    "dev": "nodemon -exec 'ts-node' src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "tsc && node dist/index.js",
+    "dev": "nodemon - exec 'ts-node' src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "axios": "^1.7.7",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "form-data": "^4.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
+    "uuid": "^11.0.3"
+  },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
@@ -22,24 +36,7 @@
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@mongodb-js/saslprep": "^1.1.9",
-    "axios": "^1.7.7",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "form-data": "^4.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7",
-    "uuid": "^11.0.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "typescript": "^5.6.3",
+    "dotenv": "^16.4.5"
   }
 }
