--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.697.0",
+    "@aws-sdk/s3-request-presigner": "^3.697.0",
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -34,9 +36,9 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "@types/uuid": "^10.0.0",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "dotenv": "^16.4.5"
+    "typescript": "^5.6.3"
   }
 }
